spring-boot-web-error/src/main/java/com/example/demo/error/app/SpringBootWebErrorApplication.java
package com.example.demo.error.app;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringBootWebErrorApplication {

	public static void main(String[] args) {
		SpringApplication.run(SpringBootWebErrorApplication.class, args);
	}

}
